src/objects/Surgical_RX__c.object
<CustomObject>
    <fields>
        <fullName>ASA__c</fullName>
        <label>ASA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Surgical RXs</relationshipLabel>
        <relationshipName>Surgical_RXs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMI__c</fullName>
        <label>BMI</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_Diastolic__c</fullName>
        <label>BP Diastolic</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BP_Systolic__c</fullName>
        <label>BP Systolic</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Center_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center Information</label>
        <referenceTo>Center_Information__c</referenceTo>
        <relationshipLabel>Surgical RXs</relationshipLabel>
        <relationshipName>Surgical_RXs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DR_for__c</fullName>
        <label>DR for</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dr_to__c</fullName>
        <label>Dr to</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extraction_Notes__c</fullName>
        <label>Extraction Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Extraction_teeth__c</fullName>
        <label>Extraction teeth</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grafting_as_needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grafting as needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Height_Feet__c</fullName>
        <label>Height Feet</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Height_Inches__c</fullName>
        <label>Height Inches</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implant_Placement__c</fullName>
        <label>Implant Placement</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Include_Lower_Arch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Lower Arch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_SM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include SM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Upper_Arch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Upper Arch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lower_Immediate_Load_Notes__c</fullName>
        <label>Lower Immediate Load Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lower_Immediate_Load__c</fullName>
        <label>Lower Immediate Load</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lower_Immediate_Placement__c</fullName>
        <label>Lower Immediate Placement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MAX_max_right_post_bone_reduction__c</fullName>
        <label>MAX max right post bone reduction</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Man_Implant_System_Other__c</fullName>
        <label>Man Implant System Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Man_implant_system__c</fullName>
        <label>Man implant system</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Straumann</fullName>
                </value>
                <value>
                    <fullName>Neodent</fullName>
                </value>
                <value>
                    <fullName>Nobel Biocare</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Man_implant_teeth__c</fullName>
        <label>Man implant teeth</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Man_max_ant_bone_reduction__c</fullName>
        <label>Man max ant bone reduction</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Man_max_left_post_bone_reduction__c</fullName>
        <label>Man max left post bone reduction</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Man_max_right_post_bone_reduction__c</fullName>
        <label>Man max right post bone reduction</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mand_Grafting_note__c</fullName>
        <label>Mand Grafting note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mand_grafting__c</fullName>
        <label>Mand grafting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Grafting_Note__c</fullName>
        <label>Max Grafting Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Max_Grafting__c</fullName>
        <label>Max Grafting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Implant_System_Other__c</fullName>
        <label>Max Implant System Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Implant_System__c</fullName>
        <label>Max Implant System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Straumann</fullName>
                </value>
                <value>
                    <fullName>Neodent</fullName>
                </value>
                <value>
                    <fullName>Nobel Biocare</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Implant_teeth__c</fullName>
        <label>Max Implant teeth</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_max_ant_bone_reduction__c</fullName>
        <label>Max max ant bone reduction</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_max_left_post_bone_reduction__c</fullName>
        <label>Max max left post bone reduction</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Surgical RXs</relationshipLabel>
        <relationshipName>Surgical_RXs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_POT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient POT</label>
        <referenceTo>Patient_POT__c</referenceTo>
        <relationshipLabel>Surgical RXs</relationshipLabel>
        <relationshipName>Surgical_RXs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pulse_Ox__c</fullName>
        <label>Pulse Ox</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pulse__c</fullName>
        <label>Pulse</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Time__c</fullName>
        <label>Review Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Reviewed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Surgical_RXs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SM_Immediate_Load_Notes__c</fullName>
        <label>SM Immediate Load Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SM_Immediate_Load__c</fullName>
        <label>SM Immediate Load</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SM_Immediate_Placement__c</fullName>
        <label>SM Immediate Placement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SM_Implant_System_Other__c</fullName>
        <label>SM Implant System Other</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SM_Implant_System_Type__c</fullName>
        <label>SM Implant System Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SM_Implant_System__c</fullName>
        <label>SM Implant System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Straumann</fullName>
                </value>
                <value>
                    <fullName>Neodent</fullName>
                </value>
                <value>
                    <fullName>Nobel Biocare</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SM_Sinus_Grafting_Left__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SM Sinus Grafting Left</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SM_Sinus_Grafting_Right__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SM Sinus Grafting Right</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SM_Sinus_Grafting__c</fullName>
        <label>SM Sinus Grafting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Single_Multi_Grafting_Note__c</fullName>
        <label>Single Multi Grafting Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Single_Multi_Grafting__c</fullName>
        <label>Single Multi Grafting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upper_Arch_Sinus_Grafting_Left__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upper Arch Sinus Grafting Left</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upper_Arch_Sinus_Grafting_Right__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upper Arch Sinus Grafting Right</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Upper_Immediate_Load__c</fullName>
        <label>Upper Immediate Load</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upper_Immediate_Notes__c</fullName>
        <label>Upper Immediate Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Upper_Immediate_Placement__c</fullName>
        <label>Upper Immediate Placement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upper_arch_sinus_grafting__c</fullName>
        <label>Upper arch sinus grafting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isactive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isactive</label>
        <type>Checkbox</type>
    </fields>
    <label>Surgical RX</label>
    <nameField>
        <displayFormat>SRX-{0000}</displayFormat>
        <label>Surgical RX Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surgical RXs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>